@@ -1,6 +1,11 @@
 v3.5.6 (XXXX-XX-XX)
 -------------------
 
+* Fixed issue #12248: Web UI on 3.6.5: 404 error on adding new index.
+  This issue caused "404: not found" errors when creating indexes via the web
+  UI. The indexes were created successfully despite the error message popping
+  up. This fix removes the misleading unconditional error message.
+
 * Make sure cluster statistics in web UI work in case a coordinator is down.
 
 * Fixed undefined behavior in AQL COLLECT with multiple group variables (issue
